.opsera-vote3/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vote3-dev
  labels:
    app.kubernetes.io/name: vote3
    app.kubernetes.io/part-of: vote3
    environment: dev
    tenant: opsera
