.opsera-vote3/k8s/base/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
  labels:
    app: vote
    app.kubernetes.io/name: vote
    app.kubernetes.io/part-of: vote3
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: vote
